<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView_totalPay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/custom_toolbar"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Payment Checker"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Transactions"
        android:layout_marginTop="240dp"
        android:theme="@style/textTheme"
        android:gravity="center"
        android:textSize="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/linear_layout_view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_sub1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView_custName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_custName_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:text="@string/sample_name_text"
                    android:theme="@style/textTheme"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_number_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_phoneNum_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:text="@string/sample_num_text"
                    android:theme="@style/textTheme"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView_rem_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_payable_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_rem_pay_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:gravity="center"
                    android:text="@string/sample_rem_amt_text"
                    android:theme="@style/textTheme"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_marginTop="5dp"
                    android:id="@+id/btn_settle_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settle_text" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_txn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_txn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=" bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/add_icon"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBarTxn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/recycler_view_txn"
        app:layout_anchorGravity="center" />

        <include layout="@layout/transaction_bottom_sheet_pay"/>
        <include layout="@layout/transaction_bottom_sheet_newtxn"/>
        <include layout="@layout/transaction_bottom_sheet_settle"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>